11-deployment-with-ingress-and-tls/web-application/deployment/nginx-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: web-application-nginx
  namespace: web-application
  labels:
    app: web-application
    workshop: workshop
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  tls:
    - hosts:
        - web-application.<YOUR_NAME>.metakube.org
  rules:
    - host: web-application.<YOUR_NAME>.metakube.org
      http:
        paths:
          - path: /
            backend:
              serviceName: web-application
              servicePort: 80
