11-deployment-with-ingress-and-tls/web-application/deployment/traefik-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: web-application-traefik
  namespace: web-application
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: web-application
    workshop: workshop
spec:
  tls:
    - hosts:
      - traefik-web-application.<YOUR_NAME>.metakube.org"
      secretName: web-application-cert

  rules:
    - host: traefik-web-application.<YOUR_NAME>.metakube.org
      http:
        paths:
          - path: /
            backend:
              serviceName: web-application
              servicePort: 80
